# ubuntu_image_fetcher

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
include/: ubuntu_cloud_image_fetcher.hpp  ubuntu_image_fetcher_interface.hpp  year_month.hpp
src/: main.cpp  ubuntu_cloud_image_fetcher.cpp
